[build-system]
requires = ["setuptools>=61.2.0", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "csvLaTeXTable"
readme = "ReadMe.md"
description = "Convert your CSV/TSV files to a latex table"
authors = [{name = "Dale Myers"}]
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 2",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
keywords = ["csv", "tsv", "TeX", "LaTeX", "table"]
license = {text = "MIT"}
requires-python = ">=3.4"
dynamic = ["version"]

[project.urls]
Former Homepage URL = "https://github.com/dalemyers/CSV-to-LaTeX-Table"
Homepage = "https://codeberg.org/KOLANICH-tools/CSV-to-LaTeX-Table"

[project.scripts]
csvLaTeXTable = "csvLaTeXTable:main"

[tool.setuptools]
zip-safe = true
include-package-data = true
py-modules = ["csvLaTeXTable"]

[tool.setuptools_scm]
