[metadata]
name = csvLaTeXTable
author = Dale Myers
url = https://github.com/dalemyers/CSV-to-LaTeX-Table
description = Convert your CSV/TSV files to a latex table
long_description = file: README.md
keywords = csv, tsv, TeX, LaTeX, table
license = MIT
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: OSI Apprived :: MIT
	Operating System :: OS Independent

[options]
zip_safe = True
include_package_data = True
py_modules = csvLaTeXTable

[options.entry_points]
console_scripts = csvLaTeXTable = csvLaTeXTable:main

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
